--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@chrisoakman/chessboardjs": "^1.0.0",
+    "chess.js": "^1.0.0-beta.3",
+    "daisyui": "^2.51.3",
+    "peerjs": "^1.4.7",
     "rxjs": "~7.8.0",
+    "stockfish.js": "^10.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -33,6 +38,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "tailwindcss": "^3.2.7",
     "typescript": "~4.9.4"
   }
 }
