--- a/.github/workflows/build_frontend_app.yml
+++ b/.github/workflows/build_frontend_app.yml
@@ -36,6 +36,7 @@ jobs:
         cp -r ./dist/${{ github.event.repository.name }} ./docs/app
     - name: Commit static
       run: |
+        git config --global user.email "skillor@gmx.net"
         git config --global user.name "Build Runner"
         git add --force ./docs/app
         git clean -f
